--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -109,7 +109,7 @@
 \maketitle
 \vspace{-3em}
 \section*{Abstract}
-In the context of the DCMI RDF Application Profile task group and the W3C Data Shapes Working Group solutions for the proper formulation and validation of constraints on RDF data are developed. Several approaches and constraint languages exist but there is no clear favorite and none of the languages is able to meet all requirements raised by data practitioners.
+In the context of the DCMI RDF Application Profile task group and the W3C Data Shapes Working Group solutions for the proper formulation and validation of constraints on RDF data are developed. \tb{solutions for the proper formulation of constraints and validation of RDF data on these constraints are developed}Several approaches and constraint languages exist but there is no clear favorite and none of the languages is able to meet all requirements raised by data practitioners.
 % Truth be told, we do may two things, blabla on and to blabla, however for the flow of the text we dont need to overkill the text. In abstract and introduction, we just give general idea so at such points we better focus on flow.  
 
 To support the work, a comprehensive, community-driven database has been created where case studies, use cases, requirements and solutions are collected. Based on this database,
@@ -120,7 +120,7 @@ Regarding the implementation of constraint languages, we already proposed to use
 In this paper, we generalize from the experience of implementing Description Set Profiles by introducing an abstraction layer that is able to describe any constraint type in a way that is more or less straight-forwardly transformable to SPARQL queries. 
 It provides a basic terminology and classification system for RDF constraints to lay the ground for discussions on RDF validation.
 
-We demonstrate that using another layer on top of SPARQL helps to implement validation consistently accross constraint languages and simplifies the mapping of new languages. 
+We demonstrate that using another layer on top of SPARQL helps to implement validation consistently accross constraint languages and simplifies the mapping of new languages. \tb{ich denke hier wird nicht klar was es bedeutet neue sprachen zu mappen, auch nicht worauf und warum / Vorschlag: and simplifies the mapping of new languages to SPARQL / simplifies the task to actually implement new languages / simplifies the actual implementation of new languages}
 
 %When using the developed vocabulary to intermediately represent constraints,
 %depending on the individual type of constraint one or multiple particular constraining elements are applied.
