Final Abstract and Title

--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -102,7 +102,7 @@
 
 \begin{document}
 
-\title{\vspace{-1em}Formulating RDF Constraints Generically and Validating RDF Data Out-Of-The-Box}
+\title{\vspace{-1em}Guidance, please! Towards a framework for RDF-based constraint languages.}
 
 \author{Thomas Bosch\\GESIS – Leibniz Institute \\for the Social Sciences, Germany\\thomas.bosch@gesis.org \and Kai Eckert\\Stuttgart Media University, Germany\\eckert@hdm-stuttgart.de}
 
