--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -432,11 +432,10 @@ This is not the case, however, for existing languages due to differences in sema
 %FILTER ( ?c < ?cv ) .		  
 %\end{ex}
 
-\section{A Vocabulary to Describe RDF Constraints Generically} 
+\section{A Vocabulary to Describe RDF Constraints of any RDF Constraint Type} 
 \label{sec:vocabulary}
 
-Prerequisites to develop a vocabulary to describe constraints of any constraint type in a generic way are 
-(1) to specify the underlying semantics for validation and thus for the vocabulary and (2) to define a basic terminology and classification system for RDF constraints which lay the ground for discussions on validation.
+Prerequisites to develop a vocabulary to describe RDF constraints of any RDF constraint type are (1) to specify the underlying semantics for RDF validation and thus for the vocabulary and (2) to define a basic terminology and classification system for RDF constraints which lay the ground for discussions on RDF validation.
 
 \subsection{Semantics for RDF Validation}
 
